Improved functionality with course management, change details page for course, some database tables might need to be cleared, some UI fixes and improvements

--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
@@ -3,108 +3,121 @@
 @{
 	ViewBag.Title = "Details";
 }
-@Html.Partial("~/Areas/Classroom/Views/Header/_Header.cshtml")
+
 <div id="alert_placeholder"></div>
-<h2>Details</h2>
-<div>
-	<h4>Course</h4>
-	<hr />
-	<dl class="dl-horizontal">
-		<dt>
-			@Html.DisplayNameFor(model => model.Subject)
-		</dt>
+<div class="row">
 
-		<dd>
-			@Html.DisplayFor(model => model.Subject)
-		</dd>
+    
+    <div class="col-sm-4 pull-left">
+        @Html.ActionLink("Back to Course List", "Index", null, new { @class = "btn btn-primary btn-sm" })
+        </div>
+        <div class="col-sm-4 pull-right">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Term)
+                </dt>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.CourseNumber)
-		</dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Term)
+                </dd>
+            </dl>
+        </div>
+        <div class="col-sm-4 pull-right">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Location)
+                </dt>
 
-		<dd>
-			@Html.DisplayFor(model => model.CourseNumber)
-		</dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Location)
+                </dd>
+            </dl>
+        </div>
+    </div>
+<hr />
+<div class="row">
+    <div class="col-sm-6">
+        <h2 title="@Html.DisplayNameFor(model => model.Title)">@Html.DisplayFor(model => model.Title)</h2>
+        <h4 title="@Html.DisplayNameFor(model => model.Subject) : @Html.DisplayNameFor(model => model.CourseNumber)">@Html.DisplayFor(model => model.Subject) @Html.DisplayFor(model => model.CourseNumber)</h4>
+    </div>
+    <div class="col-sm-6">
+        <br />
+        <br />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.StartDate)
+            </dt>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.Section)
-		</dt>
+            <dd>
+                @Html.DisplayFor(model => model.StartDate)
+            </dd>
 
-		<dd>
-			@Html.DisplayFor(model => model.Section)
-		</dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </dt>
 
-		<dt>
-			@Html.DisplayNameFor(model => model.Title)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.Title)
-		</dd>
-
-		<dt>
-			@Html.DisplayNameFor(model => model.StartDate)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.StartDate)
-		</dd>
-
-		<dt>
-			@Html.DisplayNameFor(model => model.EndDate)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.EndDate)
-		</dd>
-
-		<dt>
-			@Html.DisplayNameFor(model => model.Location)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.Location)
-		</dd>
-
-		<dt>
-			@Html.DisplayNameFor(model => model.Term)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.Term)
-		</dd>
-
-		<dt>
-			@Html.DisplayNameFor(model => model.CreatedBy)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.CreatedBy.UserName)
-		</dd>
-
-		<dt>
-			@Html.DisplayNameFor(model => model.CreateDate)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.CreateDate)
-		</dd>
-		<dt>
-			@Html.DisplayNameFor(model => model.RegistrationCode)
-		</dt>
-
-		<dd>
-			@Html.DisplayFor(model => model.RegistrationCode)
-		</dd>
-
-	</dl>
-	<hr />
-	@Html.Partial("Partial/_UserRelationships", Model.UserRelationships.Where(obj => !obj.IsDeleted))
-	@Html.Partial("Partial/_AddUserRelationships", new SmartRoom.Web.Areas.Classroom.Models.AddUserToCourse(){ CourseId = Model.Id})
-	
+            <dd>
+                @Html.DisplayFor(model => model.EndDate)
+            </dd>
+        </dl>
+    </div>
 </div>
 <hr />
-<p>
-	@Html.ActionLink("Edit Course", "Edit", new { id = Model.Id }) |
-	@Html.ActionLink("Back to Course List", "Index")
-</p>
+
+
+    @* This are is viewed by all users. *@
+    
+
+    @if (Model.UserRelationships.Any(obj => obj.AccountId.Equals(User.Identity.GetUserId()) && obj.AccountRole == SmartRoom.Web.Helpers.CourseRole.owner))
+    {
+        @* This Section is viewed by admins only. *@
+        <div class="row">
+            <div class="col-sm-12">
+                
+                @Html.Hidden("CourseId", Model.Id)
+                <div id="UserSection">
+                    @Html.Partial("Partial/_UserRelationships", Model.UserRelationships.Where(obj => !obj.IsDeleted))
+                </div>
+                <dl class="dl-horizontal">
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.RegistrationCode)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.RegistrationCode)
+                    </dd>
+
+                </dl>
+                @Html.ActionLink("Edit Course", "Edit", new { id = Model.Id }, new { @class = "btn btn-primary btn-sm", @style = "margin:10px;" })
+                @Html.Partial("Partial/_AddUserRelationships", new SmartRoom.Web.Areas.Classroom.Models.AddUserToCourse() { CourseId = Model.Id })
+
+            </div>
+            
+        </div>
+
+            }
+
+            <script>
+                function UpdateUsers() {
+                    var xmlhttp;
+                    if (window.XMLHttpRequest) {// code for IE7+, Firefox, Chrome, Opera, Safari
+                        xmlhttp = new XMLHttpRequest();
+                    }
+                    else {// code for IE6, IE5
+                        xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+                    }
+                    xmlhttp.onreadystatechange = function () {
+                        if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+                            document.getElementById("UserSection").innerHTML = xmlhttp.responseText;
+                        }
+                    }
+                    xmlhttp.open("GET", "../GetUsers/?CourseId=" + $("#CourseId").val(), true);
+                    xmlhttp.send();
+                }
+
+
+
+
+
+            </script>
