--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_AddUserRelationships.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_AddUserRelationships.cshtml
@@ -13,16 +13,14 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="myModalLabel">Add User</h4>
                 </div>
-                @using (Html.BeginForm("AddUserFromModeal", "Courses", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                @using (Html.BeginForm("AddUserFromModeal", "Courses", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { id = "AddUserForm", role = "form" }))
                 {
                 <div class="modal-body">
                     
                         @Html.AntiForgeryToken()
-                    @Html.HiddenFor(model => model.CourseId);
+                        @Html.HiddenFor(model => model.CourseId)
                         <div id="alert_placeholder_adduser"></div>
                         <div>
-                            <h4>Add New User</h4>
-                            <hr />
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="form-group">
                                 @Html.LabelFor(model => model.AccountId, "AccountId", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -59,21 +57,3 @@
             </div>
         </div>
     </div>
-<script>
-    $('form').submit(function () { // you can use any selector that match your form
-        $.ajax({
-            url: this.action,
-            type: this.method,
-            data: $(this).serialize()
-        }).done(function (data) {
-            $('#AddUser').modal('hide');
-            $('#alert_placeholder').html('<div class="alert alert-success" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' + data + '</div>')
-        })
-        .fail(function (jqXHR, textStatus) {
-            $('#alert_placeholder_adduser').html('<div class="alert alert-danger" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' + jqXHR.responseText + '</div>')
-        })
-        ;
-        $('#alert_placeholder').html('<div class="alert alert-danger" role="alert">error</div>')
-        return false; // prevent the form submission
-    });
-</script>
