--- a/SmartRoom/SmartRoom/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/SmartRoom/SmartRoom/Views/Account/ExternalLoginConfirmation.cshtml
@@ -32,7 +32,7 @@
             @Html.ValidationMessageFor(m => m.RegistrationCode, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group row" style="padding:15px;">
         <div class="pull-right">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
