--- a/SmartRoom/SmartRoom/Content/Site.css
+++ b/SmartRoom/SmartRoom/Content/Site.css
@@ -14,6 +14,7 @@ html{
     margin-left:15%;
     margin-bottom:15%;
     margin-right:15%;
+    min-height: 100%;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
