--- a/SmartRoom/SmartRoom/Views/Home/Index.cshtml
+++ b/SmartRoom/SmartRoom/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 {
     @Scripts.Render("~/Scripts/Personalized/dragDrop.js")
 }
-@*@if (User.IsInRole("Admin"))
+@if (User.IsInRole("Admin"))
 {
     <ul>
         <li>@Html.ActionLink("Classroom Index", "Index", "Courses", new { Area = "Classroom" }, new { })</li>
@@ -16,7 +16,7 @@
         <li>@Html.ActionLink("YouTube Index", "Index", "YouTube", new { Area = "YouTube" }, new { })</li>
         <li>@Html.ActionLink("YouTube Create", "Create", "YouTube", new { Area = "YouTube" }, new { })</li>
         <li>@Html.ActionLink("Syllabus Create", "Create", "Syllabus", new { Area = "Forms" }, new { })</li>
-    </ul>}*@
+    </ul>}
 <ul id="sortable">
 
     @if (Model.Count() > 0)
@@ -32,10 +32,12 @@
     @if (User.IsInRole("Teacher"))
     {
         <li class="class-container">
-            @Html.ActionLink("Add Classroom", "Create", "Courses", new { Area = "Classroom", id = "create-course" }, new { })
+            @Html.ActionLink("Add Classroom", "Create", "Courses", new { Area = "Classroom"}, new { })
             <hr />
             <br>
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            <a href="@Url.Action("Create", "Courses", new { Area = "Classroom"})">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            </a>
         </li>
     }
 </ul>
