--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/CoursePlaylists/Delete.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/CoursePlaylists/Delete.cshtml
@@ -19,22 +19,7 @@
             @Html.DisplayFor(model => model.Course.RegistrationCode)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifedBy.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModifedBy.Email)
-        </dd>
-
+  
         <dt>
             @Html.DisplayNameFor(model => model.PlaylistId)
         </dt>
@@ -44,19 +29,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CreateDate)
+            @Html.DisplayNameFor(model => model.PlaylistName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifiedDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModifiedDate)
+            @Html.DisplayFor(model => model.PlaylistName)
         </dd>
 
     </dl>
