--- a/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
+++ b/SmartRoom/SmartRoom/Areas/YouTube/Views/YouTube/Create.cshtml
@@ -12,7 +12,7 @@
    
 }
 
-<link rel="stylesheet" href="/Content/bootstrap-datetimepicker.css" />
+<link rel="stylesheet" href="/Content/bootstrap-datetimepicker.min.css" />
 
 <h2>Create</h2>
 
